# res50-im1k-renaissance

./: .gitignore  AGENT.md  README.md  main.py  pyproject.toml
dataset_prep/: 01_download_imagewoof.ipynb
dataset_prep/explorations/: explore_imagewoof.ipynb
