[project]
name = "res50-im1k-renaissance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchmetrics>=1.8.2",
    "pillow>=12.0.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "tqdm>=4.67.1",
    "albumentations>=2.0.8",
    "timm>=1.0.21",
    "datasets>=4.3.0",
]
